syntax = "proto3";

package examplecom;

import "othercom/external_child_message.proto";

// this import should not be output in the generated typescript service
import "google/protobuf/timestamp.proto";

message UnaryRequest {
  int64 some_int64 = 1;
  google.protobuf.Timestamp some_timestamp = 2;
}

message StreamRequest {
  string some_string = 1;
}

service SimpleService {
  rpc DoUnary(UnaryRequest) returns (othercom.ExternalChildMessage) {}
  rpc DoStream(StreamRequest) returns (stream othercom.ExternalChildMessage) {}
}
